[package]
edition = "2024"
name = "ferrite-tree-sitter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tree-sitter-bash = { version = "0.25.1", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-cmake = { package = "arborium-cmake", version = "2.16.0", optional = true }
tree-sitter-comment = { version = "0.3.0", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-css = { version = "0.25.0", optional = true }
tree-sitter-diff = { version = "0.1.0", optional = true }
tree-sitter-dockerfile = { package = "arborium-dockerfile", version = "2.16.0", optional = true }
tree-sitter-fish = { package = "arborium-fish", version = "2.16.0", optional = true }
tree-sitter-fortran = { version = "0.5.1", optional = true }
tree-sitter-gitcommit = { version = "0.5.0", optional = true }
tree-sitter-glsl = { version = "0.2.0", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-hyprlang = { git = "https://github.com/tree-sitter-grammars/tree-sitter-hyprlang", rev = "cecd6b748107d9da1f7b4ca03ef95f1f71d93b8f", optional = true }
tree-sitter-ini = { version = "1.4.0", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-lua = { version = "0.5.0", optional = true }
tree-sitter-md = { version = "0.5.3", optional = true }
tree-sitter-nu = { git = "https://github.com/nushell/tree-sitter-nu", rev = "696d257f6b652edb50878a783b30ad7833dec49e", optional = true }
tree-sitter-proto = { git = "https://github.com/coder3101/tree-sitter-proto", rev = "d65a18ce7c2242801f702770114ad08056c7f8c9", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-rebase = { package = "tree-sitter-git-rebase", git = "https://github.com/the-mikedavis/tree-sitter-git-rebase", rev = "760ba8e34e7a68294ffb9c495e1388e030366188", optional = true }
tree-sitter-ron = { package = "arborium-ron", version = "2.16.0", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-toml = { package = "arborium-toml", version = "2.16.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-xml = { package = "arborium-xml", version = "2.16", optional = true }
tree-sitter-yaml = { version = "0.7.2", optional = true }
tree-sitter-zig = { package = "arborium-zig", version = "2.16", optional = true }

[features]
lang-bash = ["dep:tree-sitter-bash"]
lang-c = ["dep:tree-sitter-c"]
lang-c-sharp = ["dep:tree-sitter-c-sharp"]
lang-cmake = ["dep:tree-sitter-cmake"]
lang-comment = ["dep:tree-sitter-comment"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-css = ["dep:tree-sitter-css"]
lang-diff = ["dep:tree-sitter-diff"]
lang-dockerfile = ["dep:tree-sitter-dockerfile"]
lang-fish = ["dep:tree-sitter-fish"]
lang-fortran = ["dep:tree-sitter-fortran"]
lang-git-commit = ["dep:tree-sitter-gitcommit"]
lang-glsl = ["dep:tree-sitter-glsl"]
lang-go = ["dep:tree-sitter-go"]
lang-html = ["dep:tree-sitter-html"]
lang-hyprlang = ["dep:tree-sitter-hyprlang"]
lang-ini = ["dep:tree-sitter-ini"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-json = ["dep:tree-sitter-json"]
lang-lua = ["dep:tree-sitter-lua"]
lang-md = ["dep:tree-sitter-md"]
lang-nu = ["dep:tree-sitter-nu"]
lang-proto = ["dep:tree-sitter-proto"]
lang-python = ["dep:tree-sitter-python"]
lang-rebase =  ["dep:tree-sitter-rebase"]
lang-ron = ["dep:tree-sitter-ron"]
lang-rust = ["dep:tree-sitter-rust"]
lang-toml = ["dep:tree-sitter-toml"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-xml = ["dep:tree-sitter-xml"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-zig = ["dep:tree-sitter-zig"]
