[package]
name = "ferrite-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
encoding_rs = { workspace = true }
ferrite-cli = { workspace = true }
ferrite-core = { workspace = true }
ferrite-utility = { workspace = true }
rayon = { workspace = true }
ropey = { workspace = true }
tracing = { workspace = true }
tui = { workspace = true }
unicode-width = { workspace = true }
