[package]
name = "ferrite-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
encoding_rs = { workspace = true }
ferrite-cli = { workspace = true }
ferrite-core = { workspace = true }
ferrite-talloc = { workspace = true, optional = true }
ferrite-utility = { workspace = true }
rayon = { workspace = true }
ropey = { workspace = true }
tracing = { workspace = true }
tui = { workspace = true, default-features = false }
unicode-width = { workspace = true }

[features]
talloc = ["dep:ferrite-talloc"]
